fix front-page letterspacing

--- a/css/site.styl
+++ b/css/site.styl
@@ -141,7 +141,7 @@ h1, h2, h3, h4
 h1, .font-size-h1 
   font-family: $font-sans
   font-weight: 600
-  letter-spacing: .8px
+  letter-spacing: 1px
 
 h2, .font-size-h2
   font-family: $font-sans
@@ -283,13 +283,6 @@ body.menu-active
 body.single-programacion 
   .footer-lang-switch
     display: none !important
-  
-// ******************************************************
-
-// FRONT PAGE
-
-#front-page
-  letter-spacing: 1px
 
 // ******************************************************
 
